fixing som layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,8 +25,8 @@ h2 {
 }
 
 section {
-  padding: 1.4rem;
-  max-width: 960px;
+  padding: 20px;
+  max-width: 100%;
 }
 section > h2 {
   text-align: center;
